# thetvdb-mcp-server

./: Dockerfile  MAINTAINERS.md  README.md  config.toml.example  project.env  pyproject.toml
.claude/rules/: apply-project-config.md  llm-ignores.md  openapi-query.md  readme-docker-compose.md  repository-overview.md
.github/workflows/: ci.yml  publish.yml
dockerhub/: repository-overview-copy.md
docs/: requirements.md  swagger.yml
docs/software-development-lifecycle/: requirements.md  work-plan.md
scripts/: apply-project-config.sh  copy-rules-to-cursor.sh  quality-checks.sh
src/mcp_base/: __main__.py  config.py  server.py  tools.py
src/thetvdb_mcp_server/: __main__.py  config.py  rate_limiter.py  server.py  tools.py  tvdb_client.py
tests/unit/: test_config.py  test_logging.py  test_rate_limiter.py  test_tools.py  test_tvdb_client.py
